5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1637_2703.log
== TEST (2019-04-07 11:36:47) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print(eleitor)
else:
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:36:58) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print(eleitor)
else:
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:37:40) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	msg= eleitor
else:
	msg= nao_eleitor
print(msg)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    msg= nao_eleitor
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:38:11) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	msg= "eleitor"
else:
	msg= "nao_eleitor"
print(msg)
-- EXECUTION TIME:
0.132632
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:38:51) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.125978
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:38:51) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 11:38:59) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 11:39:05) 
-- CODE:
idade= int(input("qual a idade da pessoa? "))
if (idade>18):
	print("eleitor")
else:
	print("nao_eleitor")
-- EXECUTION TIME:
0.142327
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
